--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "framer-motion": "^11.2.6",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "next-intl": "^3.15.0",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
