--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.45.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.6",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
@@ -28,6 +30,7 @@
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
