--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.6",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "next-intl": "^3.15.0",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@twa-dev/types": "^7.0.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
