--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.45.0",
@@ -24,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
+    "embla-carousel-react": "^8.1.5",
     "framer-motion": "^11.2.6",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.390.0",
@@ -32,6 +34,7 @@
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
+    "react-modal-sheet": "^3.1.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2"
   },
