--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "embla-carousel-react": "^8.1.5",
     "framer-motion": "^11.2.6",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "next-intl": "^3.15.0",
@@ -42,6 +43,7 @@
     "@svgr/webpack": "^8.1.0",
     "@twa-dev/types": "^7.0.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
