--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.390.0",
+    "mz-react-round-slider": "^1.0.3",
     "next": "14.2.3",
     "next-intl": "^3.15.0",
     "react": "^18",
