add: service start with ssl cert configuration

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
+# server
+DEV_HOST = https://tg-mini-app.local
+
 # logger
-NEXT_PUBLIC_LOGGER_STATE = on
-NEXT_PUBLIC_TRACE_ERRORS = true
+NEXT_PUBLIC_LOGGER_STATE = on # on | off
+NEXT_PUBLIC_TRACE_ERRORS = true # true | false
 
 # backend server
 NEXT_PUBLIC_API_BASE_URL = https://api-aleela.aleela.xyz # Aleelo backend
