deleted:    .cert/localhost.pfx modified:   package.json modified:   shared/layout/View.tsx modified:   widgets/LetsMeet/actions/authorize.ts modified:   widgets/LetsMeet/index.tsx

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cert": "node server.js",
+    "tg": "npm run build && npm run start",
     "prettify": "npx prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
   },
   "dependencies": {
