--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chalk": "^5.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookie": "^0.6.0",
     "cookies-next": "^4.2.1",
     "embla-carousel-react": "^8.1.5",
     "framer-motion": "^11.2.6",
