--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
+    "react-lottie": "^1.2.4",
     "react-modal-sheet": "^3.1.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2"
@@ -52,6 +53,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lottie": "^1.2.10",
     "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
