--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-lottie": "^1.2.4",
     "react-modal-sheet": "^3.1.0",
     "react-query": "^3.39.3",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
