--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev-https": "next dev -H tg-mercury.local -p 3000 --experimental-https",
+    "dev:local": "next dev -H tg-mini-app.local -p 3000 --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
